Bugfix for list icon styling (overlapping/fixed elements)

--- a/Resources/Private/FlatNav/src/style.css
+++ b/Resources/Private/FlatNav/src/style.css
@@ -12,6 +12,7 @@
 }
 
 .node {
+    position: relative;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
